--- a/tienda-on-pc-spring/tienda-on-pc/src/main/resources/application.properties
+++ b/tienda-on-pc-spring/tienda-on-pc/src/main/resources/application.properties
@@ -6,4 +6,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.session.store-type=none
+server.servlet.session.persistent=false
+
 
